waterRate
